@@ -1,4 +1,4 @@
-<?xml version="1.0" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Creator: fig2dev Version @PACKAGE_VERSION@ -->
 <!-- CreationDate: 2017-01-04 11:23:00 -->
 <!-- Magnification: 1 -->
